manifests/manifests.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    enzo: "true"
  labels:
    app: backend-app
    app.kubernetes.io/instance: backend-app
    app.kubernetes.io/name: backend-app
  name: backend-app-service
  namespace: shinnosuke-yoshizawa-checkride
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/instance: backend-app
    app.kubernetes.io/name: backend-app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    enzo: "true"
  labels:
    app: backend-app
    app.kubernetes.io/instance: backend-app
    app.kubernetes.io/name: backend-app
    app.openshift.io/runtime: python
  name: backend-app
  namespace: shinnosuke-yoshizawa-checkride
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: backend-app
      app.kubernetes.io/name: backend-app
  template:
    metadata:
      annotations:
        enzo: "true"
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: backend-app
        app.kubernetes.io/name: backend-app
    spec:
      containers:
      - env:
        - name: INGRESS_HOST
        - name: PROTOCOLS
        - name: LOG_LEVEL
          value: debug
        - name: WATSON_API_KEY
          valueFrom:
            secretKeyRef:
              key: api-key
              name: ibm-text-to-speech-secret
        - name: WATSON_ENDPOINT
          valueFrom:
            secretKeyRef:
              key: endpoint
              name: ibm-text-to-speech-secret
        - name: FRONTEND_URL
          valueFrom:
            configMapKeyRef:
              key: frontend_url
              name: app-config
        image: quay.io/shinnosuke_yoshizawa_ibm/checkride-be:43114e81e87e735b965709e03a5f11e77d86440c
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: backend-app
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
    enzo: "true"
    openshift.io/host.generated: "true"
  name: backend-app-route
  namespace: shinnosuke-yoshizawa-checkride
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: backend-app-service
    weight: 100
  wildcardPolicy: None
